Kaemika/Parser.cs
using System;
using System.Text;
using System.Collections.Generic;
using System.Linq;
using KaemikaAssets;

namespace Kaemika {
 
    public class TheParser {
        // Needed to get rid of GOLD Engine assmembly linking because it seems to interfere with building the Android version, since it requires VisualBasic runtime
        private static IParser parser; // place "the" parser here
        public static IParser Parser() {
            if (parser == null) 
                parser = new CalithaParser(SharedAssets.GoldParser("kaemikaCGT.cgt"));
            return parser;
        }
    }

    public abstract class IParser {
        public abstract bool Parse(string source, out IReduction reduction);
        public abstract string FailCategory(); // line zero reported as 1, column zero reported as 1
        public abstract string FailMessage(); // line zero reported as 1, column zero reported as 1
        public abstract int FailLineNumber(); // first line is 0
        public abstract int FailColumnNumber(); // first column is 0
        public abstract int FailLength();
    }

    public abstract class IReduction {
        public abstract string Production(); // the production as a string in BNF
        public abstract string Head(); // the lhs
        public abstract int Arms(); // number of rhs children  
        public abstract bool IsTerminal(int i); // whether the i-th rhs child is a terminal 
        public abstract string Terminal(int i); // the i-th rhs child, assuming it is a terminal
        public abstract IReduction Nonterminal(int i); // the i-th rhs child, assuming it is a nonterminal
        public void DrawReductionTree() {
            StringBuilder tree = new StringBuilder();
            tree.AppendLine("+-" + this.Head());
            this.DrawReduction(tree, 1);
            KGui.gui.GuiOutputSetText(tree.ToString());
        }
        private void DrawReduction(StringBuilder tree, int indent) {
            int n;
            string indentText = "";
            for (n = 1; n <= indent; n++) { indentText += "| "; }
            for (n = 0; n < this.Arms(); n++) {
                if (this.IsTerminal(n)) {
                    tree.AppendLine(indentText + "+-" + this.Terminal(n));
                } else {
                    IReduction arm = this.Nonterminal(n);
                    tree.AppendLine(indentText + "+-" + arm.Head());
                    arm.DrawReduction(tree, indent + 1);
                }
            }
        }
    }

    public class Parser {
        // STATEMENTS ---------------------------------------------------------------------------    

        public static Statements ParseTop(IReduction reduction){
            if (reduction.Production()              == "<Top> ::= <Statements>") {
                return ParseStatements(reduction.Nonterminal(0));
            //} else if (reduction.Production()           == "<Top> ::= kaemika '[' <Directives> ']' <Statements>") {
            //    Statements top = new Statements();
            //    top.Append(ParseDirectives(reduction.Nonterminal(2)));
            //    top.Append(ParseStatements(reduction.Nonterminal(4)).statements);
            //    return top;
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
 
        //public static List<Statement> ParseDirectives(Token reduction) {
        //    if (reduction.Production() == "<Directives> ::= <Directives> ',' <Directive>") {
        //        List<Statement> directives = ParseDirectives(reduction.Nonterminal(0));
        //        directives.Add(ParseDirective(reduction.Nonterminal(2)));
        //        return directives;
        //    } else if (reduction.Production() == "<Directives> ::= <Directive>") {
        //        return new List<Statement> { ParseDirective(reduction.Nonterminal(0)) };
        //    } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        //}

        //public static Directive ParseDirective(Token reduction) {
        //    if (reduction.Production()               == "<Directive> ::= Id '=' <Expression>") {
        //        return new Directive(reduction.Terminal(0), ParseExpression(reduction.Nonterminal(2)));
        //    } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        //}

        public static Statements ParseStatements(IReduction reduction) {
            if (reduction.Production()               == "<Statements> ::= <Statements> <Statement>") {
                Statements ss = ParseStatements(reduction.Nonterminal(0));
                return ss.Append(ParseStatement(reduction.Nonterminal(1)));
            } else if (reduction.Production()        == "<Statements> ::= ") {
                return new Statements();
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static List<Statement> ParseStatement(IReduction reduction) {
            if ((reduction.Production() == "<Statement> ::= <Net Instance>")) {
                return ParseStatement(reduction.Nonterminal(0));
            } else if ((reduction.Production() == "<Net Instance> ::= Id '(' <Expressions> ')'")) {
                return new List<Statement> { new NetworkInstance(new Variable(reduction.Terminal(0)), ParseExpressions(reduction.Nonterminal(2))) };
            } else if (reduction.Production() == "<Statement> ::= bool Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.Bool, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= number Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.Number, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= value Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.Number, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= parameter Id '<-' <Expression>") {
                return new List<Statement> { new ParameterDefinition(reduction.Terminal(1), Type.Value, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= string Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.String, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= list Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.List, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= flow Id '=' <Expression>") {
                return new List<Statement> { new ValueDefinition(reduction.Terminal(1), Type.Flow, ParseExpression(reduction.Nonterminal(3))) };
            } else if (reduction.Production() == "<Statement> ::= constant <IdSeq>") {
                IdSeq ids = ParseIdSeq(reduction.Nonterminal(1));
                List<Statement> result = new List<Statement> { };
                foreach (string id in ids.ids) { result.Add(new ValueDefinition(id, Type.Flow, new Constant(id))); }
                return result;
            } else if (reduction.Production() == "<Statement> ::= sample <Sample>") {
                return new List<Statement> { ParseSample(reduction.Nonterminal(1)) };
            } else if (reduction.Production() == "<Statement> ::= species <Species>") {
                return new List<Statement> { ParseSpecies(reduction.Nonterminal(1)) };
            } else if ((reduction.Production() == "<Statement> ::= function <Function>")) {
                return new List<Statement> { ParseFunction(reduction.Nonterminal(1)) };
            } else if ((reduction.Production() == "<Statement> ::= network <Network>")) {
                return new List<Statement> { ParseNetwork(reduction.Nonterminal(1)) };
            } else if (reduction.Production() == "<Statement> ::= random <Random>") {
                return new List<Statement> { ParseRandom(reduction.Nonterminal(1)) };
            } else if ((reduction.Production() == "<Statement> ::= <Pattern> '=' <Expression>")) {
                return new List<Statement> { new PatternDefinition(ParsePattern(reduction.Nonterminal(0)), ParseExpression(reduction.Nonterminal(2))) };            
            } else if ((reduction.Production() == "<Statement> ::= amount <Ids> '@' <Expression> <Quantity> <Allocation>")) {
                return new List<Statement> { new Amount(ParseIds(reduction.Nonterminal(1)), ParseExpression(reduction.Nonterminal(3)), ParseQuantity(reduction.Nonterminal(4)), ParseAllocation(reduction.Nonterminal(5))) };
            } else if ((reduction.Production() == "<Statement> ::= mix Id '=' <ExpressionSeq>")) {
                return new List<Statement> { new Mix(reduction.Terminal(1), ParseExpressionSeq(reduction.Nonterminal(3))) };
            } else if ((reduction.Production()               == "<Statement> ::= split <IdSeq> '=' <Expression> by <ExpressionSeq>")) {
                return new List<Statement> { new Split(ParseIdSeq(reduction.Nonterminal(1)), ParseExpression(reduction.Nonterminal(3)), ParseExpressionSeq(reduction.Nonterminal(5))) };
            } else if ((reduction.Production()               == "<Statement> ::= split <IdSeq> '=' <Expression>")) {
                return new List<Statement> { new Split(ParseIdSeq(reduction.Nonterminal(1)), ParseExpression(reduction.Nonterminal(3)), new Expressions()) };
            } else if ((reduction.Production()               == "<Statement> ::= dispose <ExpressionSeq>")) {
                return new List<Statement> { new Dispose(ParseExpressionSeq(reduction.Nonterminal(1))) };
            } else if ((reduction.Production()               == "<Statement> ::= equilibrate <IdSeq> '=' <ExpressionSeq> <EndCondition>")) {
                return new List<Statement> { new Equilibrate(ParseIdSeq(reduction.Nonterminal(1)), ParseExpressionSeq(reduction.Nonterminal(3)), ParseEndCondition(reduction.Nonterminal(4))) };
            } else if ((reduction.Production()               == "<Statement> ::= equilibrate <IdSeq> <EndCondition>")) {
                IdSeq ids = ParseIdSeq(reduction.Nonterminal(1));
                Expressions vars = new Expressions();
                foreach (string id in ids.ids) vars.Add(new Variable(id));
                return new List<Statement> { new Equilibrate(ids, vars, ParseEndCondition(reduction.Nonterminal(2))) };
            } else if ((reduction.Production()               == "<Statement> ::= equilibrate <EndCondition>")) {
                return new List<Statement> { new Equilibrate(new IdSeq().Add("vessel"), new Expressions().Add(new Variable("vessel")), ParseEndCondition(reduction.Nonterminal(1))) };
            } else if ((reduction.Production()               == "<Statement> ::= regulate <IdSeq> '=' <ExpressionSeq> to <Expression> <Temperature>")) {
                return new List<Statement> { new Regulate(ParseIdSeq(reduction.Nonterminal(1)), ParseExpressionSeq(reduction.Nonterminal(3)), ParseExpression(reduction.Nonterminal(5)), ParseTemperature(reduction.Nonterminal(6))) };
            } else if ((reduction.Production()               == "<Statement> ::= regulate <IdSeq> to <Expression> <Temperature>")) {
                IdSeq ids = ParseIdSeq(reduction.Nonterminal(1));
                Expressions vars = new Expressions();
                foreach (string id in ids.ids) vars.Add(new Variable(id));
                return new List<Statement> { new Regulate(ids, vars, ParseExpression(reduction.Nonterminal(3)), ParseTemperature(reduction.Nonterminal(4))) };
            } else if ((reduction.Production()               == "<Statement> ::= concentrate <IdSeq> '=' <ExpressionSeq> to <Expression> <Volume>")) {
                return new List<Statement> { new Concentrate(ParseIdSeq(reduction.Nonterminal(1)), ParseExpressionSeq(reduction.Nonterminal(3)), ParseExpression(reduction.Nonterminal(5)), ParseVolume(reduction.Nonterminal(6))) };
            } else if ((reduction.Production()               == "<Statement> ::= concentrate <IdSeq> to <Expression> <Volume>")) {
                IdSeq ids = ParseIdSeq(reduction.Nonterminal(1));
                Expressions vars = new Expressions();
                foreach (string id in ids.ids) vars.Add(new Variable(id));
                return new List<Statement> { new Concentrate(ids, vars, ParseExpression(reduction.Nonterminal(3)), ParseVolume(reduction.Nonterminal(4))) };
            } else if ((reduction.Production()               == "<Statement> ::= report <Reports> <Allocation>")) {
                return ParseReports(reduction.Nonterminal(1), ParseAllocation(reduction.Nonterminal(2)));
            } else if ((reduction.Production()               == "<Statement> ::= <Draw>")) {
                return new List<Statement> { ParseDrawStatement(reduction.Nonterminal(0)) };
            } else if ((reduction.Production()               == "<Statement> ::= <Reaction>")) {
                return ParseReaction(reduction.Nonterminal(0)).Select(r => { return (Statement)r; }).ToList(); // gosh! convert List<ReactionDefinition> to List<Statement>
            } else if ((reduction.Production()               == "<Statement> ::= if <Expression> then <Statements> <Else>")) {
                return new List<Statement> { new IfThenElse(ParseExpression(reduction.Nonterminal(1)), ParseStatements(reduction.Nonterminal(3)), ParseElse(reduction.Nonterminal(4))) };
            } else if ((reduction.Production()               == "<Statement> ::= ';'")) {
                return new List<Statement> { };
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Statement ParseDrawStatement(IReduction reduction) {
            if (reduction.Production()                   == "<Draw> ::= draw <Expression> from <Expression>") {
                return new DrawFromStatement(ParseExpression(reduction.Nonterminal(1)), ParseExpression(reduction.Nonterminal(3)));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static EndCondition ParseEndCondition(IReduction reduction) {
            if (reduction.Production()                   == "<EndCondition> ::= for <Expression>") {
                return new EndConditionSimple(ParseExpression(reduction.Nonterminal(1)));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Statement ParseSample(IReduction reduction) {
            if (reduction.Production()                   == "<Sample> ::= Id '=' <Expression>") {
                return new ValueDefinition(reduction.Terminal(0), Type.Sample, ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()            == "<Sample> ::= <EmptySample>") {
                ParseEmptySample(reduction.Nonterminal(0), out string name, out Expression volume, out string volumeUnit, out Expression temperature, out string temperatureUnit);
                return new SampleDefinition(name, volume, volumeUnit, temperature, temperatureUnit);
            } else if (reduction.Production()            == "<Sample> ::= Id") {
                return new SampleDefinition(reduction.Terminal(0), new NumberLiteral(1.0), "mL", new NumberLiteral(20.0), "Celsius");
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static void ParseEmptySample(IReduction reduction, out string name, out Expression volume, out string volumeUnit, out Expression temperature, out string temperatureUnit) {
            if (reduction.Production() == "<EmptySample> ::= Id '{' <Expression> <Volume> ',' <Expression> <Temperature> '}'") {
                name = reduction.Terminal(0);
                volume = ParseExpression(reduction.Nonterminal(2));
                volumeUnit = ParseVolume(reduction.Nonterminal(3));
                temperature = ParseExpression(reduction.Nonterminal(5));
                temperatureUnit = ParseTemperature(reduction.Nonterminal(6));
            } else { name = null; volume = null; volumeUnit = null; temperature = null; temperatureUnit = null; Gui.Log("UNKNOWN Production " + reduction.Production()); }
        }
        public static string ParseVolume(IReduction reduction) {
            if (reduction.Production()                   == "<Volume> ::= Id") {
                return reduction.Terminal(0);
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static string ParseTemperature(IReduction reduction) {
            if (reduction.Production()                   == "<Temperature> ::= Id") {
                return reduction.Terminal(0);
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static string ParseQuantity(IReduction reduction) {
            if (reduction.Production() == "<Quantity> ::= Id") {
                return reduction.Terminal(0);
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Statement ParseSpecies(IReduction reduction) {
            if (reduction.Production()                   == "<Species> ::= Id '=' <Expression>") {
                return new ValueDefinition(reduction.Terminal(0), Type.Species, ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()            == "<Species> ::= '{' <Substances> '}'") {
                return new SpeciesDefinition(ParseSubstances(reduction.Nonterminal(1)), new Statements());
            } else if (reduction.Production()            == "<Species> ::= <Substances> '@' <Expression> <Quantity> <Allocation>") {
                List<Substance> substances = ParseSubstances(reduction.Nonterminal(0));
                Ids ids = new Ids(); foreach (Substance substance in substances) { ids.Add(substance.name); };
                Expression initial = ParseExpression(reduction.Nonterminal(2));
                string quantity = ParseQuantity(reduction.Nonterminal(3));
                Expression allocation = ParseAllocation(reduction.Nonterminal(4));
                return new SpeciesDefinition(substances, new Statements().Add(new Amount(ids, initial, quantity, allocation)));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static List<Substance> ParseSubstances(IReduction reduction) {
            if (reduction.Production() == "<Substances> ::= <Substances> ',' <Substance>") {
                List<Substance> list = ParseSubstances(reduction.Nonterminal(0));
                list.Add(ParseSubstance(reduction.Nonterminal(2)));
                return list;
            } else if (reduction.Production()            == "<Substances> ::= <Substance>") {
                return new List<Substance> { ParseSubstance(reduction.Nonterminal(0)) };
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }  

        public static Substance ParseSubstance(IReduction reduction) {
            if (reduction.Production() == "<Substance> ::= Id '#' <Expression>") {
                return new SubstanceMolarmass(reduction.Terminal(0), ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()            == "<Substance> ::= Id") {
                return new SubstanceConcentration(reduction.Terminal(0));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }  

        public static Expression ParseAllocation(IReduction reduction) {
            if (reduction.Production() == "<Allocation> ::= in <Expression>") {
                return ParseExpression(reduction.Nonterminal(1));
            } else if (reduction.Production()            == "<Allocation> ::= ") {
                return new Variable("vessel");
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
     
        public static Statement ParseFunction(IReduction reduction) {
            if (reduction.Production()                   == "<Function> ::= Id '=' <Expression>") {
                return new ValueDefinition(reduction.Terminal(0), Type.Function, ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()            == "<Function> ::= Id <Fun>") {
                return ParseFunctionDef(reduction.Terminal(0), reduction.Nonterminal(1));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
        public static Statement ParseFunctionDef(string funName, IReduction reduction) {
            if (reduction.Production()                   == "<Fun> ::= <Headers> '{' <Expression> '}'") {
                List<Parameters> headers = ParseHeaders(reduction.Nonterminal(0));
                return new FunctionDefinition(funName, headers[0],
                    CurriedFunctionAbstraction(headers, 1,
                        ParseExpression(reduction.Nonterminal(2))));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Statement ParseNetwork(IReduction reduction) {
            if (reduction.Production()                   == "<Network> ::= Id '=' <Expression>") {
                return new ValueDefinition(reduction.Terminal(0), Type.Network, ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()                   == "<Network> ::= Id <Net>") {
                return ParseNetworkDef(reduction.Terminal(0), reduction.Nonterminal(1));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
        public static Statement ParseNetworkDef(string netName, IReduction reduction) {
            if (reduction.Production()                   == "<Net> ::= <Header> '{' <Statements> '}'") {
                return new NetworkDefinition(netName, ParseHeader(reduction.Nonterminal(0)), ParseStatements(reduction.Nonterminal(2)));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Statement ParseRandom(IReduction reduction) {
            if (reduction.Production()                   == "<Random> ::= Id '=' <Expression>") {
                return new ValueDefinition(reduction.Terminal(0), Type.Random, ParseExpression(reduction.Nonterminal(2)));
            } else if (reduction.Production()            == "<Random> ::= Id <Rand>") {
                return ParseRandomDef(reduction.Terminal(0), reduction.Nonterminal(1));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
        public static Statement ParseRandomDef(string randName, IReduction reduction) {
            if (reduction.Production()                   == "<Rand> ::= '(' omega Id ')' '{' <Expression> '}'") {
                return new RandomDefinition(randName, reduction.Terminal(2), ParseExpression(reduction.Nonterminal(5)));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
         }
       
        public static List<Parameters> ParseHeaders(IReduction reduction) {
            if (reduction.Production()                   == "<Headers> ::= <Headers> <Header>") {
                List<Parameters> headers = ParseHeaders(reduction.Nonterminal(0));
                headers.Add(ParseHeader(reduction.Nonterminal(1)));
                return headers;
            } else if (reduction.Production()           == "<Headers> ::= <Header>") {
                return new List<Parameters>() { ParseHeader(reduction.Nonterminal(0)) };
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }

        public static Parameters ParseHeader(IReduction reduction) {
            if (reduction.Production()            == "<Header> ::= '(' <Params> ')'") {
                return ParseParams(reduction.Nonterminal(1));
            } else { Gui.Log("UNKNOWN Production " + reduction.Production()); return null; }
        }
